Porting to 1.19.2 (many bugs to fix)